Increase card height for larger screens

--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -81,7 +81,7 @@
 	{% for area_of_life in aols %}
 	<div
 		id="aol-anchor-{{ area_of_life.id }}"
-		class="aol-item card bg-custom-pattern absolute left-0 top-0 right-0 bottom-0 flex flex-col z-0 h-[600px] max-w-[340px] sm:min-w-[340px] sm:relative"
+		class="aol-item card bg-custom-pattern absolute left-0 top-0 right-0 bottom-0 flex flex-col z-0 h-[600px] md:h-[95%] max-w-[340px] sm:min-w-[340px] sm:relative"
 	>
 		<div class="card__header">
 			<div class="flex justify-between items-start">
