Adjust snapshot textarea height

--- a/rule4be/templates/rule4be/aols.html
+++ b/rule4be/templates/rule4be/aols.html
@@ -160,7 +160,7 @@
 			></div>
 		</div>
 		<div
-			class="card__body max-h-[500px] overflow-y-auto"
+			class="card__body max-h-full overflow-y-auto"
 			@close-form.window="if ($event.detail.formId === 'snapshot-{{ area_of_life.id }}') openSnapshotForm = null"
 		>
 			<div
