--- a/rule4be/templates/rule4be/create_snapshot.html
+++ b/rule4be/templates/rule4be/create_snapshot.html
@@ -26,7 +26,7 @@
             <!-- Include the necessary input fields -->
             <div class="form__label-field">
                 <label class="form__label" for="body">Snapshot Details:</label>
-                <textarea class="form__input min-h-72" name="body" id="body" required></textarea>
+                <textarea class="form__input min-h-60" name="body" id="body" required autofocus></textarea>
                 <div data-invalid-feedback="" class="invalid-feedback"></div>
             </div>
             <div x-init="customFileUpload()">
