--- a/static/css/tailwind/tailwind-output.css
+++ b/static/css/tailwind/tailwind-output.css
@@ -1877,6 +1877,10 @@ a:hover,
   max-height: 750px;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
 .min-h-72 {
   min-height: 18rem;
 }
@@ -1887,6 +1891,14 @@ a:hover,
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.min-h-64 {
+  min-height: 16rem;
+}
+
+.min-h-60 {
+  min-height: 15rem;
 }
 
 .w-8 {
