--- a/rule4be/templates/rule4be/edit_aol.html
+++ b/rule4be/templates/rule4be/edit_aol.html
@@ -32,6 +32,11 @@
                 <textarea class="form__input" type="text" name="description" id="description" required>{{ form.instance.description }}</textarea>
                 <div data-invalid-feedback class="invalid-feedback"></div>
             </div>
+            <div class="form__label-field">
+                <label class="form__label" for="is_archived">Is Archived:</label>
+                <input class="form__input" type="checkbox" name="is_archived" id="is_archived" {% if form.instance.is_archived %}checked{% endif %}>
+                <div data-invalid-feedback class="invalid-feedback"></div>
+            </div>
             <div>
                 <button class="button button--primary" type="submit">Update AOL</button>
             </div>
