--- a/rule4be/templates/rule4be/archived_aols.html
+++ b/rule4be/templates/rule4be/archived_aols.html
@@ -7,74 +7,52 @@
 	x-data="{ open: false }"
 	@close-form.window="if ($event.detail.formId === 'create-aol') open = false"
 >
-	<h1 class="font-semibold text-3xl">Areas of Life</h1>
-	<div class="ms-5">
-		<button
-		@click="open = ! open"
-		hx-get="{% url 'create_aol' %}"
-		hx-headers='{"Content-Type":"text/html"}'
-		hx-accept="text/html"
-		hx-trigger="click"
-		hx-target="#create-aol-form"
-		hx-swap="innerHTML"
+	<h1 class="font-semibold text-3xl">Archived Areas of Life</h1>
+	<div class="ms-auto relative" x-data="{ open: false }">
+		<button @click="open = ! open">
+			<i class="icon--user text-lg"></i>
+		</button>
+		<div
+			id="userDropdownMenu"
+			class="flex flex-col justify-between gap-y-4 bg-white px-6 py-4 rounded-md shadow border border-gray-100 absolute top-6 -right-2 z-50"
+			x-show="open"
+			x-transition
+			@click.away="open = false"
 		>
-		<i class="icon icon--add text-lg"></i>
-	</button>
-	<div
-	data-modal-form-container
-	id="create-aol-form"
-	class="absolute left-0 right-0 z-50 max-w-96"
-	x-transition.duration.100ms
-	x-show="open"
-	></div>
+			<span
+				class="menu__item flex justify-start items-center gap-x-2"
+				hx-get="{% url 'load_user_profile' %}"
+				hx-trigger="click"
+				hx-target="#profileContainer"
+				hx-swap="outerHTML"
+			>
+				<i class="icon--profile"></i>
+				<span>Profile</span>
+			</span>
+			<a
+				class="flex justify-start items-center gap-x-2"
+				href="{% url 'logout' %}"
+			>
+				<i class="icon--logout"></i>
+				<span>Logout</span>
+			</a>
+		</div>
+	</div>
 </div>
-<div class="ms-auto relative" x-data="{ open: false }">
-	<button @click="open = ! open">
-		<i class="icon--user text-lg"></i>
-	</button>
-	<div
-	id="userDropdownMenu"
-	class="flex flex-col justify-between gap-y-4 bg-white px-6 py-4 rounded-md shadow border border-gray-100 absolute top-6 -right-2 z-50"
-	x-show="open"
-	x-transition
-	@click.away="open = false"
-	>
-	<span
-	class="menu__item flex justify-start items-center gap-x-2"
-	hx-get="{% url 'load_user_profile' %}"
-	hx-trigger="click"
-	hx-target="#profileContainer"
-	hx-swap="outerHTML"
-	>
-	<i class="icon--profile"></i>
-	<span>Profile</span>
-</span>
-<a
-class="flex justify-start items-center gap-x-2"
-href="{% url 'logout' %}"
->
-<i class="icon--logout"></i>
-<span>Logout</span>
-</a>
-</div>
-</div>
-</div>
-{% if archived_aols_count > 0 %}
 <div>
-	<form action="{% url 'load_archived_aols_page' %}" method="get">
+	<form action="{% url 'load_aols_page' %}" method="get">
 		<button
 			type="submit"
 			class="button button--default button--outline block w-fit mx-auto"
 		>
-			View Archived Areas of Life
+			View Active Areas of Life
 		</button>
 	</form>
 </div>
-{% endif %}
 <div id="aolNavMobile" class="sm:hidden w-full overflow-x-scroll flex mt-5">
 	{% for area_of_life in aols %}
 	<button
-	data-aol-anchor="aol-anchor-{{ area_of_life.id }}"
+		data-aol-anchor="aol-anchor-{{ area_of_life.id }}"
 		x-data
 		@click="showAolOnAnchorClick(event)"
 		class="font-semibold text-xl text-center min-w-[60px]"
@@ -150,26 +128,6 @@ href="{% url 'logout' %}"
 					</div>
 				</div>
 			</div>
-			<button
-				data-load-snapshot-form
-				data-button-aol-id="{{ area_of_life.id }}"
-				id="create-snapshot-{{ area_of_life.id }}"
-				class="create-snapshot-button bg-white aspect-square w-[28px] h-[28px] p-2 rounded-full border border-gray-100 flex justify-center items-center mt-4 shadow-sm hover:shadow-none transition-all"
-				@click="$dispatch('open-snapshot-form', { snapshotId: openSnapshotForm === {{ area_of_life.id }} ? null : {{ area_of_life.id }} }); "
-				hx-get="{% url 'create_snapshot' area_of_life.id %}"
-				hx-headers='{"Content-Type":"text/html"}'
-				hx-accept="text/html"
-				hx-trigger="click"
-				hx-target="#create-form-{{ area_of_life.id }}"
-				hx-swap="innerHTML"
-			>
-				<i class="icon icon--add m-0 aspect-square"></i>
-			</button>
-			<div
-				id="create-form-{{ area_of_life.id }}"
-				x-show="openSnapshotForm === {{ area_of_life.id }}"
-				x-transition
-			></div>
 		</div>
 		<div
 			class="card__body max-h-full overflow-y-auto"
@@ -177,7 +135,7 @@ href="{% url 'logout' %}"
 		>
 			<div
 				data-snapshot-today
-				hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}"
+				hx-get="{% url 'load_archived_aol_snapshots' area_of_life.id %}"
 				hx-trigger="load"
 				hx-target="#today-{{ area_of_life.id }}"
 				hx-headers='{"Content-Type":"text/html"}'
@@ -188,7 +146,7 @@ href="{% url 'logout' %}"
 		</div>
 		<div
 			data-snapshot-today-trigger
-			hx-get="{% url 'load_today_snapshot_page' area_of_life.id %}"
+			hx-get="{% url 'load_archived_aol_snapshots' area_of_life.id %}"
 			hx-trigger="click"
 			hx-target="#today-{{ area_of_life.id }}"
 			hx-headers='{"Content-Type":"text/html"}'
