Replace Intro Video

--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -33,7 +33,7 @@
 	<section class="bg-custom-pattern pb-10">
 		<video class="mx-auto" width="640" height="480" controls autoplay muted>
 			<source
-				src="{% static 'videos/rule4_rough_intro_hb.mp4' %}"
+				src="{% static 'videos/rule4_intro.mp4' %}"
 				type="video/mp4"
 			/>
 			Your browser does not support the video tag.
