bfa-120 add yourdocsai widget to main template

--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -110,5 +110,15 @@
         //     bindModalButtons();
         // });
     </script>
+
+    <div id="my-ai-chat-widget-container"></div>
+<script>
+  window.myAIChatWidgetConfig = {
+    accountId: 'c35279039072bea7',
+    apiKey: 'e8db65b2d1bad4c277754082eee32a4982835a760f0f84e16f28f6b6592d521c',
+
+  };
+</script>
+<script async defer src="https://d31env5c5sjhq3.cloudfront.net/static/widget.js"></script>
 </body>
 </html>
