--- a/rule4be/templates/rule4be/signup.html
+++ b/rule4be/templates/rule4be/signup.html
@@ -19,6 +19,15 @@
         <input class="form__input" type="password" id="password" name="password" required>
         <div data-invalid-feedback class="invalid-feedback"></div>
     </div>
+<!-- Honeypot Field -->
+    <div class="form__label-field absolute -left-[9999px] -top-[9999px]">
+        <label class="form__label" for="user_email"></label>
+        <input class="form__input" type="hidden" id="user_email" name="user_email"
+            autocomplete="off"
+            aria-hidden="true"
+            tabindex="-1">
+        <div data-invalid-feedback class="invalid-feedback"></div>
+    </div>
 
     <div class="form__label-field">
         <label class="form__label" for="email">Email:</label>
